--- a/01-printing/Usando print.ipynb
+++ b/01-printing/Usando print.ipynb
@@ -11,12 +11,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Testando a função print do python\n"
+      "Esse é um teste\n"
      ]
     }
    ],
    "source": [
-    "print(\"Testando a função print do python\")"
+    "print('Esse é um teste')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = 2 \n",
+    "y = 3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O valor de x é :  2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('O valor de x é : ', x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O valor de x é : 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('O valor de x é : %d' %x)"
    ]
   },
   {
@@ -27,19 +77,15 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "int"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O valor e x é :  2 e o valor de y é :  3\n"
+     ]
     }
    ],
    "source": [
-    "x = 2\n",
-    "type(x)"
+    "print('O valor de x é : ',x, 'e o valor de y é : ',y)"
    ]
   },
   {
@@ -50,42 +96,15 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O valor de x é 2 e o valor de y é 3\n"
+     ]
     }
    ],
    "source": [
-    "nome = 'João'\n",
-    "type(nome)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "float"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y = 2.3\n",
-    "type(y)"
+    "print('O valor de x é {} e o valor de y é {}'.format(x,y))"
    ]
   },
   {
