--- a/02-matplotlib/Plotando Gráficos.ipynb
+++ b/02-matplotlib/Plotando Gráficos.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Código auxiliar para aulas no youtube "
+    "### Código auxiliar para aulas no youtube \n",
+    "\n",
+    "https://www.youtube.com/playlist?list=PLvu-cXEstYRPZXyug9IqTJq4JtdBxXgeS"
    ]
   },
   {
