--- a/07-for/for.ipynb
+++ b/07-for/for.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Playlist no youtube\n",
+    "\n",
+    "https://www.youtube.com/playlist?list=PLvu-cXEstYRPZXyug9IqTJq4JtdBxXgeS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {
