--- a/08-while/while.ipynb
+++ b/08-while/while.ipynb
@@ -1,17 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Playlist no youtube\n",
-    "\n",
-    "https://www.youtube.com/playlist?list=PLvu-cXEstYRPZXyug9IqTJq4JtdBxXgeS"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -20,24 +11,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n"
+      "python é interessante\n",
+      "O que você escreveu foi python é interessante\n",
+      "enquanto for diferente\n",
+      "O que você escreveu foi enquanto for diferente\n",
+      "de \n",
+      "O que você escreveu foi de \n",
+      "sair\n"
      ]
     }
    ],
    "source": [
-    "q = 0\n",
-    "while q < 10:\n",
-    "    print(q)\n",
-    "    q += 1"
+    "x = 10 \n",
+    "while True:\n",
+    "    op = input()\n",
+    "    if op.lower() == 'sair':\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"O que você escreveu foi {}\".format(op))"
    ]
   },
   {
